<resources>
    <string name="app_name">shoppingAndNotesListApp</string>
    <string name="inter_ads_id">YOUR_KEY</string>
    <string name="settings">Settings</string>
    <string name="notes">Notes</string>
    <string name="shop_list">Shop list</string>
    <string name="new_item">New</string>
    <string name="new_item_menu">New item</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="new_list">New list name</string>
    <string name="update_list">Update</string>
    <string name="list_name">List name</string>
    <string name="create_list_button">Create</string>
    <string name="delete_item">Do you want delete item?</string>
    <string name="delete_alert">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="text">Text</string>
    <string name="thank_for_purchase">Thank you for your purchase!</string>
    <string name="failed_purchase">Failed to make a purchase!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="shop_list_fragment">Shop list names fragment</string>
    <string name="save">Save</string>
    <string name="bold">Bold</string>
    <string name="delete">Delete</string>
    <string name="color">Color</string>
    <string name="delete_list">Delete list</string>
    <string name="clear_list">Clear list</string>
    <string name="share_list">Share list</string>
    <string name="save_item">Save item</string>
    <string name="empty">Empty</string>
    <string name="update_list_item">Update list item</string>
    <string name="name">Name</string>
    <string name="item_info">Item info</string>
    <string name="update_item">Update item</string>
    <string name="share_by">Share by</string>
    <string name="general">General</string>
    <string name="choose_note_style">Choose note style</string>
    <string name="choose_time_format">Choose time format</string>
    <string name="remove_ads">Remove ads</string>
    <string name="remove_ads_summary">Remove all ads from this app</string>
    <string name="style_theme_settings">Style/theme settings</string>
    <string name="choose_style">Choose style</string>
    <string name="choose_theme">Choose theme</string>
    <string name="select_font_size">Select font size</string>
    <string name="font_size">Font size</string>
    <string name="note_text_settings">Note text settings</string>
    <string name="choose_note_text_size">Choose note text size</string>
    <string name="title_note_text_size">Choose title note text size</string>
    <string name="content_note_text_size">Choose content note text size</string>
    <string name="def_time_format">hh:mm:ss – dd/MM/yyyy</string>
    <string name="linear">Linear</string>
    <string name="grid">Grid</string>
    <string name="blue_gray">Blue gray</string>
    <string name="deep_orange">Deep orange</string>
    <string name="indigo">Indigo</string>
    <string name="lime">Lime</string>
    <string name="textview">TextView</string>
    <string name="_0_0">0/0</string>
    <string name="edit">Edit</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="black">Black</string>
    <string name="orange">Orange</string>
    <string name="add_note">Add note</string>
    <string name="this_is_main_screen">This is main screen!</string>
    <string name="ok">OK</string>

</resources>
