<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".ui.fragments.NoteFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcViewNote"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</FrameLayout>
